--- a/app/globals.css
+++ b/app/globals.css
@@ -66,6 +66,10 @@
     grid-template-columns: repeat(auto-fit, minmax(16rem, 1fr));
   }
   
+  .grid-template-search {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(17rem, 1fr));
+  }
 
   .text-subtitle {
     @apply mb-6 mt-10 text-center text-4xl font-bold;
@@ -98,8 +102,6 @@
   .custom-loader::after {
     margin: 8px;
   }
-
-
 
   @keyframes s6 {
     100% {
@@ -166,5 +168,3 @@
   height: 70px !important;
   width: 60px !important;
 }
-
-
