--- a/app/globals.css
+++ b/app/globals.css
@@ -72,7 +72,7 @@
   }
 
   .text-subtitle {
-    @apply mb-6 mt-10 text-center text-4xl font-bold;
+    @apply mb-6 mt-10 text-center text-3xl sm:text-4xl font-bold;
   }
 
 
